--- a/KingfoodIO/wwwroot/html/reset_password.html
+++ b/KingfoodIO/wwwroot/html/reset_password.html
@@ -369,83 +369,102 @@
                                                 <td class="column column-1" width="100%"
                                                     style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; padding-top: 5px; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
                                                     <table class="text_block block-1" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                                           cellpadding="0" cellspacing="0" role="presentation"
+                                                           style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
                                                         <tr>
                                                             <td class="pad"
                                                                 style="padding-bottom:10px;padding-left:10px;padding-right:10px;">
                                                                 <div style="font-family: sans-serif">
                                                                     <div class
-                                                                        style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #555555; line-height: 1.2;">
-                                                                        <p
-                                                                            style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
-                                                                            <span
-                                                                                style="font-size:28px;color:#ffffff;">Explore
-                                                                                our customer favourites!</span></p>
+                                                                         style="font-size: 12px; font-family: Oswald, Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 14.399999999999999px; color: #555555; line-height: 1.2;">
+                                                                        <p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;">
+                                                                            <span style="font-size:28px;color:#ffffff;">
+                                                                                Explore
+                                                                                our customer favourites!
+                                                                            </span>
+                                                                        </p>
                                                                     </div>
                                                                 </div>
                                                             </td>
                                                         </tr>
                                                     </table>
                                                     <table class="text_block block-2" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                                           cellpadding="0" cellspacing="0" role="presentation"
+                                                           style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
                                                         <tr>
                                                             <td class="pad"
                                                                 style="padding-bottom:10px;padding-left:10px;padding-right:10px;">
                                                                 <div style="font-family: Arial, sans-serif">
                                                                     <div class
-                                                                        style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #e8f4dc; line-height: 1.5;">
-                                                                        <p
-                                                                            style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;">
-                                                                            <span
-                                                                                style="font-size:16px;color:#e8f4dc;">EXPERT
-                                                                                IRISH TRAVEL AGENTS</span></p>
+                                                                         style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #e8f4dc; line-height: 1.5;">
+                                                                        <p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;">
+                                                                            <span style="font-size:16px;color:#e8f4dc;">
+                                                                                EXPERT
+                                                                                IRISH TRAVEL AGENTS
+                                                                            </span>
+                                                                        </p>
                                                                     </div>
                                                                 </div>
                                                             </td>
                                                         </tr>
                                                     </table>
                                                     <table class="text_block block-3" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                                           cellpadding="0" cellspacing="0" role="presentation"
+                                                           style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
                                                         <tr>
                                                             <td class="pad"
                                                                 style="padding-bottom:10px;padding-left:10px;padding-right:10px;">
                                                                 <div style="font-family: Arial, sans-serif">
                                                                     <div class
-                                                                        style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #808080; line-height: 1.5;">
-                                                                        <p
-                                                                            style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;">
-                                                                            <span
-                                                                                style="font-size:14px;color:#ffffff;">We
+                                                                         style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #808080; line-height: 1.5;">
+                                                                        <p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;">
+                                                                            <span style="font-size:14px;color:#ffffff;">
+                                                                                We
                                                                                 hope you enjoy browsing through our
                                                                                 comprehensive range of holidays, cruises
                                                                                 and short breaks and look forward to
                                                                                 taking care of your holiday
-                                                                                arrangements.</span></p>
+                                                                                arrangements.
+                                                                            </span>
+                                                                        </p>
+                                                                    </div>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+
+                                                    <table class="text_block block-3" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
+                                                        <tr>
+                                                            <td class="pad" style="padding-bottom:10px;padding-left:10px;padding-right:10px;">
+                                                                <div style="font-family: Arial, sans-serif">
+                                                                    <div class style="font-size: 12px; font-family: 'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 18px; color: #808080; line-height: 1.5;">
+                                                                        <p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><span style="font-size:14px;color:#ffffff;">Contact Us: <a href="mailto:info@groupmeals.com">info@groupmeals.com</a></span></p>
                                                                     </div>
                                                                 </div>
                                                             </td>
                                                         </tr>
                                                     </table>
                                                     <table class="button_block block-4" width="100%" border="0"
-                                                        cellpadding="0" cellspacing="0" role="presentation"
-                                                        style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                                                           cellpadding="0" cellspacing="0" role="presentation"
+                                                           style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                                         <tr>
                                                             <td class="pad"
                                                                 style="padding-bottom:20px;padding-left:10px;padding-right:10px;padding-top:10px;text-align:center;">
                                                                 <div class="alignment" align="center">
                                                                     <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.example.com/" style="height:68px;width:285px;v-text-anchor:middle;" arcsize="52%" strokeweight="1.5pt" strokecolor="#FFFFFF" fillcolor="#3fb9bc"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#e8f4dc; font-family:Arial, sans-serif; font-size:22px"><![endif]-->
-                                                                        <a
-                                                                        href="http://www.example.com/" target="_blank"
-                                                                        style="text-decoration:none;display:inline-block;color:#e8f4dc;background-color:#3fb9bc;border-radius:35px;width:auto;border-top:2px solid #FFFFFF;font-weight:undefined;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:10px;padding-bottom:10px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:22px;text-align:center;mso-border-alt:none;word-break:keep-all;"><span
-                                                                            style="padding-left:45px;padding-right:45px;font-size:22px;display:inline-block;letter-spacing:normal;"><span
-                                                                                dir="ltr"
-                                                                                style="word-break:break-word;"><span
-                                                                                    style="line-height: 44px;" dir="ltr"
-                                                                                    data-mce-style>VISIT IN
-                                                                                    WEBSITE</span></span></span></a><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
+                                                                    <a href="http://www.example.com/" target="_blank"
+                                                                       style="text-decoration:none;display:inline-block;color:#e8f4dc;background-color:#3fb9bc;border-radius:35px;width:auto;border-top:2px solid #FFFFFF;font-weight:undefined;border-right:2px solid #FFFFFF;border-bottom:2px solid #FFFFFF;border-left:2px solid #FFFFFF;padding-top:10px;padding-bottom:10px;font-family:Oswald, Arial, Helvetica Neue, Helvetica, sans-serif;font-size:22px;text-align:center;mso-border-alt:none;word-break:keep-all;">
+                                                                        <span style="padding-left:45px;padding-right:45px;font-size:22px;display:inline-block;letter-spacing:normal;">
+                                                                            <span dir="ltr"
+                                                                                  style="word-break:break-word;">
+                                                                                <span style="line-height: 44px;" dir="ltr"
+                                                                                      data-mce-style>
+                                                                                    VISIT IN
+                                                                                    WEBSITE
+                                                                                </span>
+                                                                            </span>
+                                                                        </span>
+                                                                    </a><!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                                                 </div>
                                                             </td>
                                                         </tr>
